# tua-susalud

./: .env.local  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.md.jinja  Dockerfile  README.md  compose.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer-lock.json  devcontainer.json
.github/workflows/: bumpversion.yml  devcontainer.yml  docker.yml  format.yml  gh-deploy.yml  lint.yml  publish-devcontainer.yml  test.yml
app/: database.py  main.py
app/api/: exceptions.py  requests.py  routes_leyenda.py  routes_tua.py  routes_turno.py
app/api/requests/: __init__.py  leyenda_request.py  turno_request.py
app/api/responses/: __init__.py  tua_input_response.py
app/migrations/: env.py
app/migrations/versions/: 025ce4b85563_leyenda.py  a597f3050d1e_init.py  ba5e124c0a54_empleados.py  cba1b5eedb67_create_leyenda_table.py
app/models/: __init__.py  empleado.py  leyenda.py
app/repositories/: __init__.py  empleado.py  leyenda.py
app/services/: __init__.py  escribir_data_tua_service.py  excel_sheet_service.py  generar_data_tua_service.py  leyenda_service.py  turno_service.py
app/utils/: TUASUSALUD.xlsx
tests/: test__turno_service.py
