[project]
name = "default"
version = "0.2.3"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."

authors = [{ name = "a5chin", email = "a5chin.origin+contact@gmail.com" }]
maintainers = [{ name = "a5chin", email = "a5chin.origin+contact@gmail.com" }]

requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "alembic>=1.16.5",
    "apiexception>=0.2.0",
    "fastapi[standard]>=0.116.1",
    "google-cloud-logging>=3.11.3",
    "mkdocs-mermaid2-plugin>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "result>=0.17.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "zeep>=4.3.2",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "cookiecutter>=2.6.0",
    "cookiecutter-data-science>=2.1.0",
    "mkdocs-material>=9.5.50",
    "nox>=2025.5.1",
    "pre-commit>=4.1.0",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
