[project]
name = "tua-susalud"
version = "0.9.2"
description = "API para gestionar roles de turno y generar reportes SUSALUD."

requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "alembic>=1.16.5",
    "apiexception>=0.2.0",
    "fastapi[standard]>=0.116.1",
    "google-cloud-logging>=3.11.3",
    "mkdocs-mermaid2-plugin>=1.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "result>=0.17.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "cookiecutter>=2.6.0",
    "cookiecutter-data-science>=2.1.0",
    "mkdocs-material>=9.5.50",
    "nox>=2025.5.1",
    "pre-commit>=4.1.0",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
template = "CHANGELOG.md.jinja"
extras = { repo_url="https://github.com/davidreyg/tua-susalud" }

[tool.commitizen.changelog]
change_type_order = ["BREAKING CHANGE", "feat", "fix", "refactor", "perf", "docs", "style", "test", "build", "ci", "chore"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
